--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "lodash": "^4.0.1",
     "mongoose": "^4.3.7",
     "morgan": "~1.6.1",
     "numeral": "^1.5.3",
